# substrate-archive

./: .dockerignore  .editorconfig  .env  .gitignore  .rustfmt.toml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.html  README.md  RELEASE-CHECKLIST.md  docker-compose.yaml  file_header.txt  shell.nix  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: archive.yml  lint.yml  release.yml  (+4 more)
archive/: Cargo.toml
archive-core/: README.md  error.rs  lib.rs  rpc.rs  types.rs
archive/examples/: client.rs  simple.rs
archive/src/: actors.rs  archive.rs  backend.rs  block_scheduler.rs  database.rs  error.rs  lib.rs  migrations.rs  queries.rs  rpc.rs  simple_db.rs  sql_block_builder.rs  state_tracing.rs  tasks.rs  threadpools.rs  types.rs  util.rs
archive/src/actors/: actor_pool.rs  blocks.rs  exec_queue.rs  generators.rs  workers.rs
archive/src/actors/generators/: blocks.rs  db_generators.rs  full_storage.rs  missing_blocks.rs  missing_storage.rs  network.rs  storage.rs
archive/src/actors/workers/: aggregator.rs  block_executor.rs  block_fetcher.rs  database.rs  defer_storage.rs  exec_queue.rs  full_storage.rs  metadata.rs  transformers.rs
archive/src/backend/: block_exec.rs  block_executor.rs  block_fetcher.rs  client.rs  database.rs  frontend.rs  read_only_backend.rs  runtime_version_cache.rs  storage_backend.rs  storage_block_backend.rs  test_harness.rs  test_util.rs  trie.rs  util.rs
archive/src/backend/block_executor/: block_scheduler.rs
archive/src/backend/frontend/: client.rs  executor.rs
archive/src/backend/read_only_backend/: blockchain_backend.rs  main_backend.rs  misc_backend.rs  state_backend.rs
archive/src/database/: batch.rs  listener.rs  models.rs  prepare_sql.rs  queries.rs
archive/src/migrations/: 20200819211008_table_update_fn.sql  V1__metadata.sql  V1_metadata.sql  V2__blocks.sql
archive/src/migrations/migrations/: 20200819211008_table_update_fn.sql  20200819211014_blocks_trigger.sql
archive/src/threadpools/: block_exec_pool.rs  block_fetcher.rs  block_scheduler.rs
archive/test_data/: .gitattributes
config/: polkadot.toml  substrate.toml
docker/: Dockerfile  build.sh
examples/: kusama.rs  polkadot.rs  simple.rs
integration_tests/: Cargo.toml  README.md
kusama-archive/: Cargo.toml  test_conf.toml
kusama-archive/src/: archive.rs  cli_opts.rs  cli_opts.yaml  config.rs  main.rs  queries.rs
migrations/: 20200826193459_index_ids.sql
node-template-archive/: Cargo.toml  archive_conf.toml
node-template-archive/src/: archive.rs  chain_spec.rs  cli_opts.rs  cli_opts.yaml  config.rs  main.rs
polkadot-archive/: Cargo.toml  README.md  logs  signed_extrinsic_example  test_conf.toml
polkadot-archive/src/: archive.rs  cli_opts.rs  cli_opts.yaml  config.rs  main.rs  queries.rs
schema/: archive.sql
scripts/: create-test-db.sh  createdb.sh  docker_postgres_init.sql  down.sh  init.sh  init.sql  postgres.conf  revert-all.sh  up.sh
src/: actors.rs  archive.rs  backend.rs  blocks_archive.rs  database.rs  error.rs  extrinsics.rs  frame_ext.rs  lib.rs  main.rs  metadata.rs  migrations.rs  paint_ext.rs  queries.rs  rpc.rs  simple_db.rs  sql.rs  sql_block_builder.rs  srml_ext.rs  tasks.rs  tests.rs  threadpools.rs  types.rs  util.rs
substrate-archive/: Capsule-Archive.md  Cargo.toml  sqlx-data.json
substrate-archive-backend/: Cargo.toml
substrate-archive-backend/src/: block_exec.rs  database.rs  error.rs  frontend.rs  lib.rs  read_only_backend.rs  runtime_version_cache.rs  test_util.rs  util.rs
substrate-archive-backend/src/frontend/: client.rs  executor.rs
substrate-archive-backend/src/read_only_backend/: blockchain_backend.rs  main_backend.rs  misc_backend.rs  state_backend.rs
substrate-archive-common/: Cargo.toml
substrate-archive-common/src/: database.rs  error.rs  lib.rs  models.rs  msg.rs  types.rs  util.rs
substrate-archive/benches/: bench_block_execution.rs  bench_many_blocks.rs
substrate-archive/examples/: simple.rs
substrate-archive/src/: actors.rs  archive.rs  database.rs  error.rs  executor.rs  lib.rs  logger.rs  migrations.rs  simple_db.rs  sql_block_builder.rs  tasks.rs  test_util.rs  traits.rs  types.rs  util.rs  wasm_tracing.rs
substrate-archive/src/actors/: actor_pool.rs  workers.rs
substrate-archive/src/actors/workers/: blocks.rs  database.rs  extrinsics_decoder.rs  metadata.rs  state_tracing.rs  storage_aggregator.rs  storage_entries.rs
substrate-archive/src/database/: batch.rs  listener.rs  models.rs  queries.rs
substrate-archive/src/migrations/: 20200718183525_blocks.sql  20200826151710_tasks.sql  20201201160228_state_tracing.sql  20210405215447_table_update_fn.sql  20210407200105_tasks.sql  20210408234721_tasks.sql  20210610221212_tasks.sql  20210611075511_add_column_justification.sql  20210615163211_hex_to_int.sql  20210812012136_remove_tasks.sql  20210812012334__sa_config.sql  20211108182913_extrinsics.sql  20211108183014_capsules.sql  20211108183015_trexes.sql  20211108301599_capsule_indexes.sql  20211108301600_trex_indexes.sql  20211108301602_trex_trigger.sql  20211111184701_sa_config_chain.sql  20211118214301_sa_config_genesis_hash.sql  20220825163606_traces_change_type.sql
subzero/: Cargo.toml  archive_conf.toml
test-common/: Cargo.toml
test-common/src/: database.rs  lib.rs  queue.rs  runtime.rs
test-common/test-wasm/: Cargo.toml  build.rs
test-common/test-wasm/src/: lib.rs
test-common/test_data/: README.md  blocks_v25.csv  blocks_v26.csv  blocks_v27.csv  blocks_v28.csv  blocks_v29.csv  blocks_v30.csv
test-data/: MOCK_BLOCK_DATA.sql
wasm-tracing/: README.md
work-queue/: Cargo.toml  LICENSE-SWIRL  README.md
work-queue/integration_tests/: Cargo.toml
work-queue/integration_tests/tests/: codegen.rs  dummy_jobs.rs  lib.rs  runner.rs  sync.rs  test_guard.rs
work-queue/sa-work-queue/: Cargo.toml
work-queue/sa-work-queue/src/: db.rs  error.rs  job.rs  lib.rs  registry.rs  runner.rs  threadpool.rs
work-queue/sa_work_queue_proc_macro/: Cargo.toml
work-queue/sa_work_queue_proc_macro/src/: background_job.rs  diagnostic_shim.rs  lib.rs
(+135 files in other folders)
