[package]
name = "substrate-archive"
version = "0.2.0-alpha.2"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
# external
log = "0.4"
futures = { version = "0.3" }
failure = "0.1"
chrono = "0.4"
primitive-types = "0.7"
serde = { version = "1.0.105", features = ["derive"] }
# enabling arbitrary_precision for serde_json may cause rpc requests to fail
serde_json = "1.0.50"
dirs = "2"
fern = { version = "0.6", features = ["colored"] }
bastion = "0.3"
tempdir = "0.3.7"
async-std = "1.5.0"
sqlx = { version = "0.3.5", features = ["postgres", "chrono", "json", "bigdecimal"] }
async-trait = "0.1.31"
# Local
# desub = { path = "../desub/core/", package="desub-core" }
subxt = { path = "../substrate-subxt", package = "substrate-subxt"}

# Parity
kvdb = "0.6"
kvdb-rocksdb = "0.8"
parity-util-mem = "0.6.1"
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive", "full"] }

# Substrate

sp-database = { git = "https://github.com/paritytech/substrate", branch = "master", package="sp-database" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sc-service" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sc-client-db" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-storage" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-runtime" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sc-client-api" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-blockchain" }
substrate-rpc-primitives = {  git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-rpc" }
sp-core = {  git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-core" }
runtime-version = {  git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-version" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sc-executor" }
sc-transaction-graph = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sc-transaction-graph" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sc-chain-spec" }
bigdecimal = "0.1.2"
itertools = "0.9.0"
rayon = "1.3.0"

[dev-dependencies]
# desub-extras = { path = "../desub/extras/", package="desub-extras", features = ["polkadot"] }
polkadot-service = { package = "polkadot-service", git = "https://github.com/paritytech/polkadot", branch = "master", default-features = false }
kusama-runtime = { package = "kusama-runtime", git = "https://github.com/paritytech/polkadot", branch = "master", default-features = false }
