[package]
name = "substrate-archive"
version = "0.5.0-pre"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
# external
log = "0.4"
futures = { version = "0.3" }
timer = { version = "3.0", package = "futures-timer" }
serde = { version = "1.0", features = ["derive"] }
# enabling arbitrary_precision for serde_json may cause rpc requests to fail
serde_json = "1.0"
dirs = { version = "2", package = "directories" }
sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "master", version = "0.4.0-pre", default-features = false, features = ["postgres", "macros", "runtime-tokio"] }
# sqlx = { version = "0.3", features = ["postgres", "tls", "macros"] }
async-trait = "0.1"
hex = "0.4"
itertools = "0.9"
flume = "0.7.1"
parking_lot = "0.10"
hashbrown = { version = "0.8.0", features = ["inline-more"] }
thiserror = "1.0"
rayon = "1.3"
num_cpus = "1"
xtra = "0.4"
# Sql migrations
refinery = { version = "0.3.0", features = ["postgres"] }
# Just a simple wrapper around std::thread that `joins on drop`
jod-thread = "0.1.2"

# Optional 
fern = { version = "0.6", features = ["colored"], optional = true }
chrono = { version = "0.4", optional = true }
tokio = { version = "0.2", features = ["sync", "rt-threaded", "blocking", "time"], optional = true }
smol = { version = "0.1", optional = true }
async-std = { version = "1", features = ["unstable"], optional = true}

# Parity
primitive-types = "0.7"
jsonrpsee = { git = "https://github.com/dt665m/jsonrpsee", branch = "feature/client-error-handling" }
kvdb = "0.7"
kvdb-rocksdb = "0.9"
parity-util-mem = { version = "*", default-features = false, features = ["std"] }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive", "full"] }
hash-db = "0.15"

# Substrate
sp-database = { git = "https://github.com/paritytech/substrate", branch = "master", package="sp-database" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-storage" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-externalities" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-runtime" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sc-client-api" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-blockchain" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-core" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-api" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-block-builder" }
sp-version = {  git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-version" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sc-executor" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sc-chain-spec" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-trie" } 
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-state-machine" }
itoa = "0.4.6"

[dev-dependencies]
# desub-extras = { path = "../desub/extras/", package="desub-extras", features = ["polkadot"] }
polkadot-service = { package = "polkadot-service", git = "https://github.com/paritytech/polkadot", branch = "master" }

pretty_env_logger = "0.4.0"
# used in tests for storing test data on disk
flate2 = "1.0.14"
bincode = "1.2.1"
tempfile = "3.1"

[features]
with-tokio = ["tokio", "xtra/with-tokio-0_2"]
with-async-std = ["async-std", "xtra/with-async_std-1" ]
with-smol = ["smol", "xtra/with-smol-0_1"]
default = ["with-tokio", "logging"]
logging = ["chrono", "fern"]
test_rocksdb = []
