[package]
name = "substrate-archive"
version = "0.5.0-pre"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
# external
log = "0.4"
futures = { version = "0.3" }
timer = { version = "3.0", package = "futures-timer" }
serde = { version = "1.0", features = ["derive"] }
# enabling arbitrary_precision for serde_json may cause rpc requests to fail
serde_json = "1.0"
dirs = { version = "3", package = "directories" }
sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "master", version = "0.4.0-pre", default-features = false, features = ["postgres", "macros", "runtime-async-std", "migrate"] }
async-trait = "0.1"
hex = "0.4"
itertools = "0.9"
# 0.7.2 introduces breaking changes with Send/Sync bounds
flume = "^0.7.1"
parking_lot = "0.10"
parity-util-mem = "0.7"
hashbrown = { version = "0.8", features = ["inline-more"] }
thiserror = "1.0"
rayon = "1.3"
num_cpus = "1"
xtra = { git = "https://github.com/insipx/xtra", branch = "insipx/bump-smol", features = ["with-smol-0_3"] }
# Just a simple wrapper around std::thread that `joins on drop`
jod-thread = "0.1.2"
smol = { version = "0.3" }
itoa = "0.4.6"
include_dir = "0.6.0"
tempfile = "3.1.0"
arc-swap = "0.4.7"

# Optional 
fern = { version = "0.6", features = ["colored"], optional = true }
chrono = { version = "0.4", optional = true }

# Parity
primitive-types = "0.7"
jsonrpsee = { git = "https://github.com/dt665m/jsonrpsee", branch = "feature/client-error-handling" }
kvdb = "0.7"
kvdb-rocksdb = "0.9"
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }
hash-db = "0.15"

# Substrate
sp-database = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package="sp-database" }
sp-storage = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-storage" }
sp-externalities = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-externalities" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-runtime" }
sc-client-api = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sc-client-api" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-blockchain" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-core" }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-api" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-block-builder" }
sp-version = {  git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-version" }
sc-executor = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sc-executor" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sc-chain-spec" }
sp-trie = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-trie" } 
sp-state-machine = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-state-machine" }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "sp-io" }

[dev-dependencies]
# desub-extras = { path = "../desub/extras/", package="desub-extras", features = ["polkadot"] }
polkadot-service = { package = "polkadot-service", git = "https://github.com/paritytech/polkadot", tag = "v0.8.19" }

pretty_env_logger = "0.4.0"
# used in tests for storing test data on disk
flate2 = "1.0"
bincode = "1.3"
tempfile = "3.1"

[features]
default = ["logging"]
logging = ["chrono", "fern"]
test_rocksdb = []
