[package]
name = "integration_tests"
version = "0.1.0"
edition = "2018"
authors = [ "Andrew Plaza <andrew.plaza@parity.io>" ]
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-common = { path = "../test-common/" }
