[package]
name = "kusama-archive"
version = "0.2.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-archive = { version = "0.4", path = "../archive", features = ["logging"] }
polkadot-service = { package = "polkadot-service", git = "https://github.com/paritytech/polkadot", branch = "master" }
sc-chain-spec = { package = "sc-chain-spec", git = "https://github.com/paritytech/substrate", branch = "master" }
clap = { version = "2.33.1", features = ["yaml", "suggestions", "color"] }
toml = "0.5"
futures = "0.3.5"
log = "0.4.8"
pretty_env_logger = "0.4.0"
anyhow = "1.0.31"
serde = "1.0.110"
sqlx = { version = "0.3.5", features = ["postgres"] }
async-std = { version = "1.5.0", features = ["unstable"] }
async-ctrlc = "1.1.0"
indicatif = "0.14.0"
