[package]
name = "node-template-archive"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-archive = { version = "0.3.1", path = "../archive", default-features = false, features = ["logging"] }
node-template-runtime = { git = "https://github.com/paritytech/substrate", branch="master", default-features = false, package = "node-template-runtime" }
clap = { version = "2.33.1", features = ["yaml", "suggestions", "color"] }
toml = "0.5"
futures = "0.3.5"
log = "0.4.8"
pretty_env_logger = "0.4.0"
anyhow = "1.0.31"
serde = "1.0.110"
sqlx = { version = "0.3.5", features = ["postgres"] }
async-std = "1.5.0"
async-ctrlc = "1.1.0"
indicatif = "0.14.0"

sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, version = "0.8.0-rc2", package = "sp-consensus-aura" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, version = "2.0.0-rc2", package = "sp-finality-grandpa" }
# sc-finality-grandpa = { version = "0.8.0-rc2" }

sc-service = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, version = "0.8.0-rc2", package = "sc-service" }
# sp-runtime = { version = "2.0.0-rc2", package = "sp-runtime" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, version = "2.0.0-rc2", package = "sp-core" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, version = "0.8.0-rc2", package = "sc-executor" }


[features]
default = ["std"]
std = [
    "substrate-archive/std",
    "node-template-runtime/std",
    "sp-consensus-aura/std",
    "sp-finality-grandpa/std",
    "sp-core/std",
    "sc-executor/std"
]
