[package]
name = "node-template-archive"
version = "0.2.1"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-archive = { version = "0.5.0-pre", path = "../archive", features = ["logging"] }
node-template-runtime = { git = "https://github.com/paritytech/substrate", rev="065b0f321f223b4cb3b22cee0e71fa6930034e2a", default-features = false, package = "node-template-runtime" }
node-template = { git = "https://github.com/paritytech/substrate", rev="065b0f321f223b4cb3b22cee0e71fa6930034e2a", package = "node-template" }
clap = { version = "2.33.1", features = ["yaml", "suggestions", "color"] }
toml = "0.5"
futures = "0.3.5"
log = "0.4"
pretty_env_logger = "0.4.0"
anyhow = "1.0.31"
serde = "1.0"

[features]
