[package]
name = "polkadot-archive"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
failure = "0.1"
codec = { package = "parity-scale-codec", version = "1.0.0" }
env_logger = "0.7.0"
runtime-primitives = { git = "https://github.com/paritytech/substrate/", package = "sp-runtime", branch = "polkadot-master" }
substrate-archive = { path = "../" }
serde = {  version = "1.0.41", features = ["derive"] }
serde_json = { version = "1.0.41", features = ["arbitrary_precision"] }

[dependencies.polkadot-primitives]
# path = "../../polkadot/primitives"
git = "https://github.com/insipx/polkadot"
package = "polkadot-primitives"
default-features = false
branch = "insipx/archive-patches"
features = ["std"]

[dependencies.polkadot-runtime]
# path = "../../polkadot/runtime"
git = "https://github.com/insipx/polkadot"
package = "polkadot-runtime"
default-features = false
branch = "insipx/archive-patches"
features = ["std"]
