[package]
name = "polkadot-archive"
version = "0.2.1"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-archive = { version = "0.5.0-pre", path = "../archive", features = ["logging"] }
polkadot-service = { package = "polkadot-service", git = "https://github.com/paritytech/polkadot", branch = "master" }
sc-chain-spec = { package = "sc-chain-spec", git = "https://github.com/paritytech/substrate", branch = "master" }
clap = { version = "2.33.1", features = ["yaml", "suggestions", "color"] }
toml = "0.5"
futures = "0.3.5"
log = "0.4.8"
pretty_env_logger = "0.4.0"
anyhow = "1.0.31"
serde = "1.0.110"
tokio = { version = "0.2", features = ["full", "signal"] }
timer = { version = "3.0", package = "futures-timer" }

