[package]
name = "polkadot-archive"
version = "0.2.1"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-archive = { version = "0.5.0-pre", path = "../archive", features = ["logging"] }
polkadot-service = { package = "polkadot-service", git = "https://github.com/paritytech/polkadot", tag = "v0.8.19" }
sc-chain-spec = { package = "sc-chain-spec", git = "https://github.com/paritytech/substrate", rev = "065b0f321f223b4cb3b22cee0e71fa6930034e2a" }
clap = { version = "2.33.1", features = ["yaml", "suggestions", "color"] }
toml = "0.5"
log = "0.4"
anyhow = "1.0"
serde = "1.0"
ctrlc = { version = "3.1.5", features = ["termination"] }
