[package]
name = "substrate-archive-backend"
version = "0.5.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# External
arc-swap = "1.2.0"
futures = "0.3"
hashbrown = { version = "0.11", features = ["inline-more"] }
log = "0.4"
num_cpus = "1.13"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# Parity
codec = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive", "full"] }
hash-db = "0.15"
kvdb = "0.9"
kvdb-rocksdb = "0.11"
parity-util-mem = "0.9"

# Substrate
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-database = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-version = {  git = "https://github.com/paritytech/substrate", branch = "master" }
sp-wasm-interface = {  git = "https://github.com/paritytech/substrate", branch = "master" }
