[package]
name = "substrate-archive-common"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
rayon = "1.4"
bincode = "1.3"
sqlx = { version = "0.4", default-features = false, features = ["postgres", "macros", "runtime-async-std-rustls", "migrate", "json", "offline"] }
xtra = { version = "0.5.0-beta.4", features = ["with-smol-0_3"] }
flume = "=0.7.2"
thiserror = "1.0"
log = "0.4"
coil = { git = "https://github.com/insipx/coil", package = "coil"}
serde_json = "1.0"
rmp-serde = "0.14"
dirs = { version = "3", package = "directories" }
serde = { version = "1.0", features = ["derive"] }

# Parity
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }

# Substrate
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master" }

# Optional
fern = { version = "0.6", features = ["colored"], optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = ["logging"]
logging = ["chrono", "fern"]
