[package]
name = "substrate-archive-common"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
dirs = { version = "3", package = "directories" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4", default-features = false, features = ["postgres", "macros", "runtime-async-std-rustls", "migrate", "json", "offline"] }
thiserror = "1.0"
xtra = { version = "0.5.0-rc.1", features = ["with-smol-1"] }

coil = { git = "https://github.com/insipx/coil" }
flume = { version = "0.10.1", default-features = false }
rayon = "1.4"
rmp-serde = "0.14"

# Parity
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }

# Substrate
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master" }

# Optional
fern = { version = "0.6", features = ["colored"], optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
bincode = "1.3"

[features]
default = ["logging"]
logging = ["chrono", "fern"]
